[workspace]
members = [
    "ownable",
    "metadata",
    "token",
    "sellable",
    "redeemable"
]

[workspace.dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "0.16.0"
cw2 = "0.15.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = "1.0.87"
thiserror = { version = "1.0.31" }
burnt-glue = "0.2.2"
semver = "1.0.14"
cw721-base = "0.16.0"
ownable = { path = "./ownable", version = "0.1.0" }
token = { path = "./token", version = "0.1.0" }
redeemable = { path = "./redeemable", version = "0.1.0" }